@@ -1,5 +1,5 @@
 [project]
-version = "0.41.3"
+version = "0.41.4"
 name = "Clarity"
 requires-python = ">=3.12"
 readme = "README.md"
